[package]
name = "allayindexer"
version = "0.2.0"
edition = "2024"
description = "AllayHub plugin index builder and synchronizer"

[dependencies]
instant-segment = "0.11"
smartstring = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
ureq = { version = "3.1.4", features = ["json"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
postcard = { version = "1", features = ["alloc"] }
flate2 = "1"
toml = "0.9.8"
tree-sitter = "0.26"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-groovy = "0.1"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization
panic = "abort"   # Smaller panic handling
strip = true      # Strip symbols
